--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.8.2",
+    "@solana/spl-token": "^0.4.13",
     "@solana/spl-token-registry": "^0.2.4574",
+    "@solana/web3.js": "^1.98.2",
+    "bottleneck": "^2.19.5",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "zod": "^3.25.23"
